[package]
authors = ["René Herrero Gómez <rene@sevenseas.io>"]
categories = ["science"]
description = " S-100 IHO Universal Hydrographic Data Model "
documentation = "https://docs.rs/s100"
edition = "2021"
keywords = ["iho", "s-100"]
name = "s100"
readme = "README.md"
repository = "https://github.com/sevenseas-io/s100"
version = "0.1.1-alpha.2"
publish = false

[dependencies]
libxml = "0.3"

[dev-dependencies]
tempfile = "3.3"
